--- a/SIMEDVirtual/SIMEDVirtual/Properties/Resources.resx
+++ b/SIMEDVirtual/SIMEDVirtual/Properties/Resources.resx
@@ -169,7 +169,7 @@
   <data name="edit32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>edit32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-   <data name="camera" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="camera" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>camera.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="dr paq" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -195,6 +195,9 @@
   </data>
   <data name="delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="deletePhoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>deletePhoto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ingreso" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ingreso.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -229,7 +232,7 @@
   <data name="client" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>client.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="deletePhoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>deletePhoto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="enterprise" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>enterprise.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
